[package]
name = "choseong-pullup"
version = "0.2.0"
authors = ["ylsun <y15un@y15un.dog>"]
edition = "2021"
rust-version = "1.56.0"
description = "촛엉 올려 쓱이 in rust"
repository = "https://github.com/y15un/rust-korean-trifling"
license = "MIT"
keywords = ["korean", "language"]
categories = ["text-processing"]
workspace = "../"

[dependencies]
unikorn = { git = "https://github.com/y15un/unikorn-rs.git", tag = "v0.1.0" } # use git until we publish unikorn to crates-io; MIT
