[package]
name = "horizontal-chojongseong-flip"
version = "0.2.0"
authors = ["ylsun <y15un@y15un.dog>"]
edition = "2021"
rust-version = "1.56.0"
description = "고좁더 풍셔슁징치 (초종성 수평뒤집기) in rust"
license = "MIT"
keywords = ["korean", "language"]
categories = ["text-processing"]
workspace = "../"

[dependencies]
unikorn = { git = "https://github.com/y15un/unikorn-rs.git", tag = "v0.1.0" } # use git until we publish unikorn to crates-io; MIT
